@@ -249,7 +249,7 @@ namespace Chummer
                 }
             }
         }
-
+        #region Refresh Treeviews and Panels
         protected void RefreshAttributes(FlowLayoutPanel pnlAttributes, NotifyCollectionChangedEventArgs notifyCollectionChangedEventArgs = null)
         {
             if (notifyCollectionChangedEventArgs == null)
@@ -1852,7 +1852,7 @@ namespace Chummer
             }
             treQualities.SortCustomAlphabetically(objSelectedNode?.Tag);
         }
-
+        #endregion
         /// <summary>
         /// Method for removing old <addqualities /> nodes from existing characters.
         /// </summary>
@@ -6273,5 +6273,138 @@ namespace Chummer
             }
             base.Dispose(disposing);
         }
+
+        #region Vehicles Tab
+
+        public void PurchaseVehicleGear(Vehicle objSelectedVehicle, Location objLocation = null)
+        {
+            XmlDocument objXmlDocument = XmlManager.Load("gear.xml");
+            bool blnAddAgain;
+
+            do
+            {
+                Cursor = Cursors.WaitCursor;
+                frmSelectGear frmPickGear = new frmSelectGear(CharacterObject, 0, 1, objSelectedVehicle);
+                frmPickGear.ShowDialog(this);
+                Cursor = Cursors.Default;
+
+                if (frmPickGear.DialogResult == DialogResult.Cancel)
+                {
+                    frmPickGear.Dispose();
+                    break;
+                }
+                blnAddAgain = frmPickGear.AddAgain;
+
+                // Open the Gear XML file and locate the selected piece.
+                XmlNode objXmlGear = objXmlDocument.SelectSingleNode("/chummer/gears/gear[id = \"" + frmPickGear.SelectedGear + "\"]");
+
+                // Create the new piece of Gear.
+                List<Weapon> lstWeapons = new List<Weapon>();
+
+                Gear objGear = new Gear(CharacterObject);
+                objGear.Create(objXmlGear, frmPickGear.SelectedRating, lstWeapons, string.Empty, false);
+
+                if (objGear.InternalId.IsEmptyGuid())
+                {
+                    frmPickGear.Dispose();
+                    continue;
+                }
+
+                objGear.Quantity = frmPickGear.SelectedQty;
+                objGear.DiscountCost = frmPickGear.BlackMarketDiscount;
+
+                // Reduce the cost for Do It Yourself components.
+                if (frmPickGear.DoItYourself)
+                    objGear.Cost = "(" + objGear.Cost + ") * 0.5";
+                // If the item was marked as free, change its cost.
+                if (frmPickGear.FreeCost)
+                {
+                    objGear.Cost = "0";
+                }
+
+                if (CharacterObject.Created)
+                {
+                    decimal decCost = objGear.TotalCost;
+
+                    // Multiply the cost if applicable.
+                    char chrAvail = objGear.TotalAvailTuple().Suffix;
+                    if (chrAvail == 'R' && CharacterObjectOptions.MultiplyRestrictedCost)
+                        decCost *= CharacterObjectOptions.RestrictedCostMultiplier;
+                    if (chrAvail == 'F' && CharacterObjectOptions.MultiplyForbiddenCost)
+                        decCost *= CharacterObjectOptions.ForbiddenCostMultiplier;
+
+                    // Check the item's Cost and make sure the character can afford it.
+                    if (!frmPickGear.FreeCost)
+                    {
+                        if (decCost > CharacterObject.Nuyen)
+                        {
+                            Program.MainForm.ShowMessageBox(LanguageManager.GetString("Message_NotEnoughNuyen"),
+                                LanguageManager.GetString("MessageTitle_NotEnoughNuyen"), MessageBoxButtons.OK,
+                                MessageBoxIcon.Information);
+                            frmPickGear.Dispose();
+                            continue;
+                        }
+
+                        // Create the Expense Log Entry.
+                        ExpenseLogEntry objExpense = new ExpenseLogEntry(CharacterObject);
+                        objExpense.Create(decCost * -1,
+                            LanguageManager.GetString("String_ExpensePurchaseVehicleGear") +
+                            LanguageManager.GetString("String_Space") +
+                            objGear.DisplayNameShort(GlobalOptions.Language), ExpenseType.Nuyen, DateTime.Now);
+                        CharacterObject.ExpenseEntries.AddWithSort(objExpense);
+                        CharacterObject.Nuyen -= decCost;
+
+                        ExpenseUndo objUndo = new ExpenseUndo();
+                        objUndo.CreateNuyen(NuyenExpenseType.AddVehicleGear, objGear.InternalId, 1);
+                        objExpense.Undo = objUndo;
+                    }
+                }
+
+
+                bool blnMatchFound = false;
+                // If this is Ammunition, see if the character already has it on them.
+                if (objGear.Category == "Ammunition" && frmPickGear.Stack)
+                {
+                    foreach (Gear objVehicleGear in objSelectedVehicle.Gear.Where(objVehicleGear =>
+                        objVehicleGear.Name == objGear.Name && objVehicleGear.Category == objGear.Category &&
+                        objVehicleGear.Rating == objGear.Rating && objVehicleGear.Extra == objGear.Extra &&
+                        Enumerable.SequenceEqual(objVehicleGear.Children, objGear.Children)))
+                    {
+                        // A match was found, so increase the quantity instead.
+                        objVehicleGear.Quantity += objGear.Quantity;
+                        blnMatchFound = true;
+                        break;
+                    }
+                }
+                frmPickGear.Dispose();
+
+                if (!blnMatchFound)
+                {
+                    // Add the Gear to the Vehicle.
+                    if (objLocation != null)
+                    {
+                        objLocation.Children.Add(objGear);
+                    }
+                    objSelectedVehicle.Gear.Add(objGear);
+                    objGear.Parent = objSelectedVehicle;
+
+                    foreach (Weapon objWeapon in lstWeapons)
+                    {
+                        if (objLocation != null)
+                        {
+                            objLocation.Children.Add(objGear);
+                        }
+                        objWeapon.ParentVehicle = objSelectedVehicle;
+                        objSelectedVehicle.Weapons.Add(objWeapon);
+                    }
+                }
+
+                IsCharacterUpdateRequested = true;
+
+                IsDirty = true;
+            }
+            while (blnAddAgain);
+        }
+        #endregion
     }
 }
